test_suite5/ALAN/test_suite/alan-2022-examples/failing/006860_mutation.alan
source Buo begin not 6 do relax end end
